Add PrintGCDetails analysis.